// generated by buf generate src/protos

syntax = "proto3";

// message Tag {
// 	string emoji = 1;
// 	string text = 2;
// }

message CommunityPreview {
  // bytes banner = 1;
	// bytes photo = 2;
	string display_name = 3;
	string description = 4;
	uint32 members_count = 5;
	// string app_url = 6;
	// repeated Tag tags = 7;
	string color = 8;
	// todo?!: try it here instead of url
	// bytes public_key = 9;
	// bytes description = 10;
	// bytes signature = 11;
	// string public_key = 12;
}

message CommunityChatPreview {
	// todo?!: try it here instead of url
	// string uuid = 1;
	string display_name = 2;
	// string description = 3;
	// uint32 members_count = 4;
	string emoji = 5;
	string color = 6;
	// todo?!: try spreading instead to reduce size
	CommunityPreview community = 7;
	// bytes public_key = 8;
}

// message Url {
// 	string text = 1;
// 	string url = 2;
// }

message UserPreview {
	// bytes photo = 1;
	string display_name = 2;
	string description = 3;
	// string emoji_hash = 4;
	// repeated Url social_urls = 5;
	// string app_url = 6;
	string color = 7;
}
